--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .idea/
 __pycache__/
 resources/data/
-resources/engines/deep_speech
+!resources/engines/deep_speech/.gitkeep
+resources/engines/deep_speech/*
 resources/results/*
